Bug 739048 - Check to see if a plugin is unsupported before making it click-to-play. r=josh